# haskbox

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  haskat.cabal  haskbox.cabal
.github/workflows/: haskell.yml
cbits/: copyfile.c  copyfile.h
src/: Cat.hs  Main.hs  Version.hs
src/Cmd/: Basename.hs  Cat.hs  Cksum.hs  Comm.hs  Cp.hs  Cut.hs  Date.hs  Df.hs  Dirname.hs  Dos2unix.hs  Echo.hs  Env.hs  Expand.hs  Factor.hs  False.hs  Fold.hs  Head.hs  Hostid.hs  Id.hs  Link.hs  Ln.hs  Logname.hs  Ls.hs  Mkdir.hs  Mkfifo.hs  Mktemp.hs  Mv.hs  Nl.hs  Nproc.hs  Od.hs  Paste.hs  Printenv.hs  Printf.hs  Pwd.hs  Readlink.hs  Realpath.hs  Rm.hs  Rmdir.hs  Seq.hs  Shuf.hs  (+23 more)
src/Cmd/Df/: Mount.hs  Types.hs
src/Cmd/Ls/: Color.hs  Filter.hs  Format.hs  Sort.hs  Stat.hs  Types.hs
test/: Dockerfile  Main.hs  Test.hs
test/Test/: Utils.hs
test/Test/Cmd/: DfSpec.hs  File.hs  Ls.hs  LsSpec.hs  Misc.hs  Path.hs  Sort.hs  System.hs  Text.hs
