cabal-version:      3.4
name:               haskat
version:            0.1.0.0
synopsis:           A GNU cat implementation in Haskell
license:            Apache-2.0
author:             AlpinDale
maintainer:         alpindale@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall -O2 -rtsopts "-with-rtsopts=-A1m -I0 -G1"
    cc-options: -O3

executable haskat
    import:           warnings
    main-is:          Main.hs
    other-modules:    Cat
    build-depends:
        base >= 4.14 && < 5,
        bytestring >= 0.10,
        unix >= 2.7,
        inline-c >= 0.9
    hs-source-dirs:   src
    default-language: GHC2021

test-suite haskat-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:
        base >= 4.14 && < 5,
        bytestring >= 0.10,
        process >= 1.6,
        directory >= 1.3,
        filepath >= 1.4,
        temporary >= 1.3
    hs-source-dirs:   test
    default-language: GHC2021
