cabal-version:      3.4
name:               haskbox
version:            0.1.0.0
synopsis:           Unix utilities in Haskell (busybox-style)
license:            Apache-2.0
author:             AlpinDale
maintainer:         alpindale@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall -O2 -rtsopts "-with-rtsopts=-A1m -I0 -G1"

executable haskbox
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Version
        Cmd.Basename
        Cmd.Cat
        Cmd.Cksum
        Cmd.Comm
        Cmd.Cp
        Cmd.Cut
        Cmd.Date
        Cmd.Dirname
        Cmd.Dos2unix
        Cmd.Echo
        Cmd.Env
        Cmd.Expand
        Cmd.Factor
        Cmd.False
        Cmd.Fold
        Cmd.Head
        Cmd.Hostid
        Cmd.Id
        Cmd.Link
        Cmd.Ln
        Cmd.Logname
        Cmd.Ls
        Cmd.Ls.Color
        Cmd.Ls.Filter
        Cmd.Ls.Format
        Cmd.Ls.Sort
        Cmd.Ls.Types
        Cmd.Mkdir
        Cmd.Mkfifo
        Cmd.Mktemp
        Cmd.Mv
        Cmd.Nl
        Cmd.Nproc
        Cmd.Od
        Cmd.Paste
        Cmd.Printenv
        Cmd.Printf
        Cmd.Pwd
        Cmd.Readlink
        Cmd.Realpath
        Cmd.Rm
        Cmd.Rmdir
        Cmd.Seq
        Cmd.Shuf
        Cmd.Sleep
        Cmd.Sort
        Cmd.Split
        Cmd.Stat
        Cmd.Sync
        Cmd.Tac
        Cmd.Tail
        Cmd.Tee
        Cmd.Test
        Cmd.Timeout
        Cmd.Touch
        Cmd.Tr
        Cmd.True
        Cmd.Truncate
        Cmd.Tsort
        Cmd.Tty
        Cmd.Uname
        Cmd.Unexpand
        Cmd.Uniq
        Cmd.Unlink
        Cmd.Wc
        Cmd.Whoami
        Cmd.Yes
    build-depends:
        array >= 0.5,
        base >= 4.14 && < 5,
        bytestring >= 0.10,
        containers >= 0.6,
        directory >= 1.3,
        filepath >= 1.4,
        process >= 1.6,
        random >= 1.2,
        time >= 1.9,
        unix >= 2.7
    hs-source-dirs:   src
    default-language: GHC2021

test-suite haskbox-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        Test.Utils
        Test.Cmd.File
        Test.Cmd.Ls
        Test.Cmd.LsSpec
        Test.Cmd.Misc
        Test.Cmd.Path
        Test.Cmd.Sort
        Test.Cmd.System
        Test.Cmd.Text
    build-depends:
        async >= 2.2,
        base >= 4.14 && < 5,
        bytestring >= 0.10,
        containers >= 0.6,
        directory >= 1.3,
        filepath >= 1.4,
        process >= 1.6,
        tasty >= 1.4,
        tasty-hunit >= 0.10,
        temporary >= 1.3,
        unix >= 2.7
    hs-source-dirs:   test
    default-language: GHC2021
